--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,4 +1,18 @@
-<h1>WYRCAN</h1>
-<p>
-  home-page works!
-</p>
+<div class="home-content">
+  <div class="home-title">
+    <h1>WYRCAN</h1>
+  </div>
+  <div class="home-description">
+    <p>
+        Wyrcan is an APP dedicated to connecting employers with undiscovered talent
+    </p>
+  </div>
+  <div class="home-auth">
+    <a class="btn-home-signup" [routerLink]="['/signup']">
+      <div class="home-signup"><span>Sign Up</span></div>
+    </a>
+    <a class="btn-home-login" [routerLink]="['/login']">
+      <div class="home-login"><span>Log In</span></div>
+    </a>
+  </div>
+</div>
