--- a/src/app/components/signup-form/signup-form.component.html
+++ b/src/app/components/signup-form/signup-form.component.html
@@ -1,25 +1,28 @@
-<h2>SignUp</h2>
-<form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
-  <div class="field" [ngClass]="{'has-error': feedbackEnabled && usernameField.errors}">
-    <label>Username</label>
-    <input type="text" name="username" [(ngModel)]="username" #usernameField="ngModel" required minlength="6" [disabled]="processing"/>
-    <div *ngIf="feedbackEnabled && usernameField.errors">
-      <p *ngIf="usernameField.errors.required" class="validation">username required</p>
-      <p *ngIf="usernameField.errors.minlength" class="validation">username is too short</p>
+<div class="login-signup">
+  <h2>Sign Up</h2>
+  <form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
+    <div class="form-input" [ngClass]="{'has-error': feedbackEnabled && usernameField.errors}">
+      <label>Username</label>
+      <input type="text" name="username" [(ngModel)]="username" #usernameField="ngModel" required minlength="6" [disabled]="processing"/>
+      <div *ngIf="feedbackEnabled && usernameField.errors">
+        <p *ngIf="usernameField.errors.required" class="validation">username required</p>
+        <p *ngIf="usernameField.errors.minlength" class="validation">username is too short</p>
+      </div>
     </div>
-  </div>
-  <div class="field" [ngClass]="{'has-error': feedbackEnabled && passwordField.errors}">
-    <label>Password</label>
-    <input type="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required minlength="6" [disabled]="processing"/>
-    <div *ngIf="feedbackEnabled && passwordField.errors">
-      <p *ngIf="passwordField.errors.required" class="validation">password required</p>
-      <p *ngIf="passwordField.errors.minlength" class="validation">password is too short</p>
+    <div class="form-input" [ngClass]="{'has-error': feedbackEnabled && passwordField.errors}">
+      <label>Password</label>
+      <input type="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required minlength="6" [disabled]="processing"/>
+      <div *ngIf="feedbackEnabled && passwordField.errors">
+        <p *ngIf="passwordField.errors.required" class="validation">password required</p>
+        <p *ngIf="passwordField.errors.minlength" class="validation">password is too short</p>
+      </div>
     </div>
-  </div>
-  <div class="field submit">
-    <button type="submit" [disabled]="processing">SignUp</button>
-    <div *ngIf="feedbackEnabled && form.invalid">
-      <p class="validation">there are errors in the form, please review the fields</p>
+    <div class="form-button">
+      <button type="submit" [disabled]="processing" class="btn-signup">SignUp</button>
+      <div *ngIf="feedbackEnabled && form.invalid">
+        <p class="validation">there are errors in the form, please review the fields</p>
+      </div>
     </div>
-  </div>
-</form>
+  </form>
+  <a [routerLink]="['/login']">Log In</a>
+</div>
