--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,3 +1,9 @@
-<p>
-  You entered in to your profile!
-</p>
+<div class="profile-wrapper">
+  <div class="profile-img">
+
+  </div>
+  <div class="profile-name">
+    <h1>{{user.name}}</h1>
+  </div>
+
+</div>
