--- a/src/app/components/signup-form/signup-form.component.html
+++ b/src/app/components/signup-form/signup-form.component.html
@@ -1,9 +1,16 @@
 <div class="login-signup">
   <h2>Sign Up</h2>
   <form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
+    <div class="form-input" [ngClass]="{'has-error': feedbackEnabled && nameField.errors}">
+      <label>Name</label>
+      <input type="text" name="name" [(ngModel)]="name" #nameField="ngModel" required [disabled]="processing"/>
+      <div *ngIf="feedbackEnabled && nameField.errors">
+        <p *ngIf="nameField.errors.required" class="validation">name required</p>
+      </div>
+    </div>
     <div class="form-input" [ngClass]="{'has-error': feedbackEnabled && usernameField.errors}">
       <label>Username</label>
-      <input type="text" name="username" [(ngModel)]="username" #usernameField="ngModel" required minlength="6" [disabled]="processing"/>
+      <input type="text" name="username" [(ngModel)]="username" #usernameField="ngModel" required minlength="3" [disabled]="processing"/>
       <div *ngIf="feedbackEnabled && usernameField.errors">
         <p *ngIf="usernameField.errors.required" class="validation">username required</p>
         <p *ngIf="usernameField.errors.minlength" class="validation">username is too short</p>
@@ -11,14 +18,27 @@
     </div>
     <div class="form-input" [ngClass]="{'has-error': feedbackEnabled && passwordField.errors}">
       <label>Password</label>
-      <input type="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required minlength="6" [disabled]="processing"/>
+      <input type="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required minlength="3" [disabled]="processing"/>
       <div *ngIf="feedbackEnabled && passwordField.errors">
         <p *ngIf="passwordField.errors.required" class="validation">password required</p>
         <p *ngIf="passwordField.errors.minlength" class="validation">password is too short</p>
       </div>
     </div>
+    <div class="form-button signup-radio" [ngClass]="{'has-error': feedbackEnabled && passwordField.errors}">
+      <div class="signup-input">
+        <input type="radio" name="role" id="role-student" value="student" [(ngModel)]="role" #roleField="ngModel" required/>
+        <label class="label-role" for="role-student">Student</label>
+      </div>
+      <div class="signup-input">
+        <input type="radio" name="role" id="role-employer" value="employer" [(ngModel)]="role" #roleField="ngModel" required/>
+        <label class="label-role" for="role-employer">Employer</label>
+      </div>
+      <div *ngIf="feedbackEnabled && roleField.errors">
+        <p *ngIf="roleField.errors.required" class="validation">role required</p>
+      </div>
+    </div>
     <div class="form-button">
-      <button type="submit" [disabled]="processing" class="btn-signup">SignUp</button>
+      <button type="submit" [disabled]="processing" class="btn-signup">Sign Up</button>
       <div *ngIf="feedbackEnabled && form.invalid">
         <p class="validation">there are errors in the form, please review the fields</p>
       </div>
