--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,3 +1,8 @@
+<div class="myjobs-nav">
+  <div>
+    <a href="/jobs"> My Jobs</a>
+  </div>
+</div>
 <div class="profile-wrapper">
   <div class="profile-img">
 
