add create job view

--- a/src/app/components/nav-employer/nav-employer.component.html
+++ b/src/app/components/nav-employer/nav-employer.component.html
@@ -1,5 +1,10 @@
 <div class="myjobs-nav">
   <div>
-      <a [routerLink]="['/my-jobs']"> My Jobs</a>
+    <a [routerLink]="['/my-jobs']">My Jobs</a>
+  </div>
+  <div>
+    <div class="btn btn-create-job">
+      <a [routerLink]="['/my-jobs/create']">Create Job</a>
+    </div>
   </div>
 </div>
