--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         <span class="username text">loading...</span>
       </div>
       <div *ngIf="!loading && !!user">
-        <a (click)="logout()">logout</a>
+        <a (click)="logout()">Log Out</a>
       </div>
     </div>
   </div>
