--- a/src/app/components/nav-employer/nav-employer.component.html
+++ b/src/app/components/nav-employer/nav-employer.component.html
@@ -1,5 +1,6 @@
 <div class="myjobs-nav">
   <div>
+    <a [routerLink]="['/profile']">Profile</a> |
     <a [routerLink]="['/my-jobs']">My Jobs</a>
   </div>
   <div>
