--- a/src/app/pages/my-jobs/my-jobs.component.html
+++ b/src/app/pages/my-jobs/my-jobs.component.html
@@ -1,3 +1,12 @@
-<p>
-  my-jobs works!
-</p>
+<app-nav-employer></app-nav-employer>
+<div class="myjobs-wrapper">
+  <h1>My Jobs</h1>
+  <div *ngFor="let job of jobs" class="job-item">
+    <div class="job-position">
+      {{job.position}}
+    </div>
+    <div class="job-description">
+      {{job.description}}
+    </div>
+  </div>
+</div>
