Add job card component

--- a/src/app/pages/my-jobs/my-jobs.component.html
+++ b/src/app/pages/my-jobs/my-jobs.component.html
@@ -1,12 +1,7 @@
 <app-nav-employer></app-nav-employer>
 <div class="myjobs-wrapper">
   <h1>My Jobs</h1>
-  <div *ngFor="let job of jobs" class="job-item">
-    <div class="job-position">
-      {{job.position}}
-    </div>
-    <div class="job-description">
-      {{job.description}}
-    </div>
+  <div *ngFor="let job of jobs">
+    <app-job-card [job]="job"></app-job-card>
   </div>
 </div>
