--- a/src/app/pages/my-jobs/my-jobs.component.html
+++ b/src/app/pages/my-jobs/my-jobs.component.html
@@ -2,6 +2,8 @@
 <div class="myjobs-wrapper">
   <h1>My Jobs</h1>
   <div *ngFor="let job of jobs">
-    <app-job-card [job]="job"></app-job-card>
+    <a [routerLink]="['/jobs', job._id]">
+      <app-job-card [job]="job"></app-job-card>
+    </a>
   </div>
 </div>
