--- a/src/app/pages/create-job/create-job.component.html
+++ b/src/app/pages/create-job/create-job.component.html
@@ -1,4 +1,4 @@
-<app-nav-employer></app-nav-employer>
+<app-navbar [user]="user"></app-navbar>
 <div class="create-job-wrapper">
   <h2>Create job</h2>
   <form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
