--- a/src/app/pages/my-jobs/my-jobs.component.html
+++ b/src/app/pages/my-jobs/my-jobs.component.html
@@ -1,4 +1,4 @@
-<app-nav-employer></app-nav-employer>
+<app-navbar [user]="user"></app-navbar>
 <div class="myjobs-wrapper">
   <h1>My Jobs</h1>
   <div *ngFor="let job of jobs">
