--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,9 +1,4 @@
-<div *ngIf="user.role === 'employer'">
-  <app-nav-employer></app-nav-employer>
-</div>
-<div *ngIf="user.role === 'student'">
-  <app-nav-student></app-nav-student>
-</div>
+<app-navbar [user]="user"></app-navbar>
 <div class="profile-wrapper">
   <div class="profile-img">
 
@@ -11,5 +6,4 @@
   <div class="profile-name">
     <h1>{{user.name}}</h1>
   </div>
-
 </div>
