--- a/src/app/pages/my-jobs/my-jobs.component.html
+++ b/src/app/pages/my-jobs/my-jobs.component.html
@@ -1,9 +1,15 @@
 <app-navbar [user]="user"></app-navbar>
-<div class="myjobs-wrapper">
+<div *ngIf="!jobs" class="no-content">
+  <p>Loading ...</p>
+</div>
+<div class="myjobs-wrapper" *ngIf="jobs">
   <h1>My Jobs</h1>
   <div *ngFor="let job of jobs">
     <a [routerLink]="['/jobs', job._id]">
       <app-job-card [job]="job"></app-job-card>
     </a>
+  </div>
+  <div *ngIf="jobs.length === 0" class="job-item">
+    No jobs created yet.
   </div>
 </div>
