--- a/src/app/pages/jobs-id/jobs-id.component.html
+++ b/src/app/pages/jobs-id/jobs-id.component.html
@@ -8,8 +8,8 @@
       {{job.position}}
     </div>
     <div class="job-description">
-        {{job.description}}
-      </div>
+      {{job.description}}
+    </div>
   </div>
 </div>
 <div class="applicants-wrapper">
@@ -18,8 +18,16 @@
   </div>
   <div *ngIf="user.role === 'employer'">
     <h2>Applicants</h2>
+    <div *ngIf="!job">
+      Loading applicants...
+    </div>
+    <div *ngIf="job">
+      <div *ngFor="let applicant of job.applications">
+        <app-applicant-card [applicant]="applicant"></app-applicant-card>
+      </div>
+    </div>
   </div>
   <div *ngIf="user.role === 'student'">
-    <button>Apply</button>
+      <button (click)="apply(job._id)">Apply</button>
   </div>
 </div>
