--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,2 +1,2 @@
 <app-navbar [user]="user"></app-navbar>
-<app-profile-info [userProfile]="userProfile"></app-profile-info>
+<app-profile-info [userProfile]="userProfile" [userRole]="userRole"></app-profile-info>
