--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,8 +9,8 @@
       <a *ngIf="user.role === 'student'" [routerLink]="['/jobs']">Jobs</a>
     </div>
     <div>
-      <div class="btn btn-create-job" *ngIf="user.role === 'employer'">
-        <a [routerLink]="['/my-jobs/create']">Create Job</a>
+      <div class="reset-a" *ngIf="user.role === 'employer'">
+        <a [routerLink]="['/my-jobs/create']"><div class="btn btn-create">Create Job</div></a>
       </div>
     </div>
   </div>
