--- a/src/app/components/profile-info/profile-info.component.css
+++ b/src/app/components/profile-info/profile-info.component.css
@@ -3,7 +3,10 @@
 }
 .profile-img{
   margin: 0 auto;
-  width: 100px;;
   height: 100px;
-  background: #eee;
+  /* width: 100px;
+  background: #eee; */
+}
+.profile-img img{
+  width: 100px;
 }
