--- a/src/app/components/profile-info/profile-info.component.html
+++ b/src/app/components/profile-info/profile-info.component.html
@@ -4,10 +4,18 @@
 <div *ngIf="userProfile">
   <div class="profile-wrapper">
     <div class="profile-img">
-  
+      <img src="/assets/img/profilepic.png" alt="Profile Picture"/>
     </div>
     <div class="profile-name">
       <h1>{{userProfile.name}}</h1>
     </div>
+    <div class="profile-description">
+      <h2>Description</h2>
+    </div>
+  </div>
+  <div *ngIf="!userRole">Loading ...</div>
+  <div *ngIf="userRole.role === 'employer' && userProfile.role === 'student'">
+    <button>Message</button>
+    <button>Accept</button>
   </div>
 </div>
