--- a/src/app/pages/jobs-id/jobs-id.component.html
+++ b/src/app/pages/jobs-id/jobs-id.component.html
@@ -5,9 +5,11 @@
 <div *ngIf="job">
   <div class="job-details">
     <div class="job-position">
+      <h2>Job Position:</h2>
       {{job.position}}
     </div>
     <div class="job-description">
+      <h2>Job Description:</h2>      
       {{job.description}}
     </div>
   </div>
@@ -19,7 +21,7 @@
   <div *ngIf="user.role === 'employer'">
     <h2>Applicants</h2>
     <div *ngIf="!job">
-      Loading applicants...
+      Loading applicants ...
     </div>
     <div *ngIf="job">
       <div *ngFor="let applicant of job.applications">
@@ -28,7 +30,7 @@
     </div>
   </div>
   <div *ngIf="user.role === 'student'">
-    <div *ngIf="!job">Loading applicants...</div>
+    <div *ngIf="!job">Loading info ...</div>
     <div *ngIf="job">
       <div>
         Published by: <a [routerLink]="['/profile', job.owner._id]">{{job.owner.name}}</a>
