add filter job position

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     </div>
     <div>
       <div class="reset-a" *ngIf="user.role === 'employer'">
-        <a [routerLink]="['/my-jobs/create']"><div class="btn btn-create">Create Job</div></a>
+        <a [routerLink]="['/my-jobs/create']"><div class="btn">Create Job</div></a>
       </div>
     </div>
   </div>
