--- a/src/app/components/profile-info/profile-info.component.html
+++ b/src/app/components/profile-info/profile-info.component.html
@@ -15,7 +15,11 @@
   </div>
   <div *ngIf="!userRole">Loading ...</div>
   <div *ngIf="userRole.role === 'employer' && userProfile.role === 'student'">
-    <button>Message</button>
-    <button>Accept</button>
+    <div class="form-button">
+      <button class="btn-create">Message</button>
+    </div>
+    <div class="form-button">
+      <button class="btn-create">Accept</button>
+    </div>
   </div>
 </div>
