style + logout img

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         <span class="username text">loading...</span>
       </div>
       <div class="reset-a" *ngIf="!loading && !!user">
-        <a (click)="logout()"><div class="btn">Log Out</div></a>
+        <a (click)="logout()"><img src="/assets/img/logout.png" alt="Logout" class="logout-img" /></a>
       </div>
     </div>
   </div>
