--- a/src/styles.css
+++ b/src/styles.css
@@ -56,24 +56,15 @@ footer{
 }
 .content-wrapper{
   padding: 95px 20px 50px;
-  background: #fff;
+  background: #f5f5f5;
   min-height: 100vh;
-  margin-bottom: -43px;
+  margin-bottom: -13px;
   margin-top: -77px;
 }
 .container {
   margin: 0 20px;
 }
 /* ---- components ---- */
-/* HEADER */
-.header-wrapper{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header-logo img{
-  width: 50px;
-}
 /* FORMS */
 .form-input, .form-button, .form-textarea {
   margin-bottom: 15px;
