--- a/src/app/components/applicant-card/applicant-card.component.html
+++ b/src/app/components/applicant-card/applicant-card.component.html
@@ -1,5 +1,8 @@
 <a [routerLink]="['/profile', applicant.user._id]">
   <div class="applicant-item">
+    <div class="applicant-img">
+      <img src="/assets/img/profilepic.png" alt="Applicant Picture" />
+    </div>
     <div class="applicant-name">
       {{applicant.user.name}}
     </div>
