--- a/src/app/components/job-card/job-card.component.css
+++ b/src/app/components/job-card/job-card.component.css
@@ -1,8 +1,7 @@
 .job-item{
-  background: rgba(0, 0, 0 , 0.02);
-  border: 1px solid #444;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  background: #fff;
   margin-bottom: 10px;
   padding: 15px;
   border-radius: 2px;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
 }
