styling + add job

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,9 +9,9 @@
       <a *ngIf="user.role === 'student'" [routerLink]="['/jobs']">Jobs</a>
     </div>
     <div>
-      <div class="reset-a" *ngIf="user.role === 'employer'">
+      <!-- <div class="reset-a" *ngIf="user.role === 'employer'">
         <a [routerLink]="['/my-jobs/create']"><div class="btn">Create Job</div></a>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
