--- a/src/app/components/job-card/job-card.component.html
+++ b/src/app/components/job-card/job-card.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/jobs', job._id]">
-  <div class="job-item">
+  <div class="card">
     <div class="job-position">
       {{job.position}}
     </div>
