--- a/src/app/components/applicant-card/applicant-card.component.css
+++ b/src/app/components/applicant-card/applicant-card.component.css
@@ -1,9 +1,4 @@
-.applicant-item{
-  background: #fff;
-  margin-bottom: 10px;
-  padding: 15px;
-  border-radius: 2px;
-  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
+.applicant{
   display: flex;
   align-items: center;
 }
