--- a/src/app/pages/archived/archived.component.html
+++ b/src/app/pages/archived/archived.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="jobs">
   <h2>Archived Jobs</h2>
   <div *ngFor="let job of jobs">
-    <app-job-card [job]="job"></app-job-card>
+    <app-archived-job [job]="job" (unarchive)="handleUnarchive($event)"></app-archived-job>
   </div>
   <div *ngIf="jobs.length === 0">
     No jobs archived yet.
