--- a/src/app/pages/jobs-id/jobs-id.component.html
+++ b/src/app/pages/jobs-id/jobs-id.component.html
@@ -1,7 +1,7 @@
 <app-navbar [user]="user"></app-navbar>
 <div *ngIf="!job">Loading job ...</div>
 <div *ngIf="job">
-  <div>
+  <div *ngIf="user.role === 'employer'">
     <button (click)="archive(job._id)" class="btn-create">Archive</button>
   </div>
   <div class="job-details">
@@ -10,7 +10,7 @@
       {{job.position}}
     </div>
     <div class="job-description">
-      <h2>Job Description:</h2>      
+      <h2>Job Description:</h2>
       {{job.description}}
     </div>
     <div *ngIf="user.role === 'student'">
