--- a/src/styles.css
+++ b/src/styles.css
@@ -137,3 +137,10 @@ button:active, .btn-home-signup:active,.btn-home-login:active, .btn:active{
   position: relative;
   top: 3px;
 }
+.card{
+  background: #fff;
+  margin-bottom: 10px;
+  padding: 15px;
+  border-radius: 2px;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
+}
