--- a/src/app/components/archived-job/archived-job.component.html
+++ b/src/app/components/archived-job/archived-job.component.html
@@ -2,5 +2,6 @@
   <div class="job-position">
     {{job.position}}
   </div>
-  <span (click)="handleUnarchiveClick(job._id)">Unarchive</span>
+  <button (click)="handleUnarchiveClick(job._id)">Unarchive</button>
+  <button (click)="handleDeleteClick(job._id)">Delete</button>
 </div>
