--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -8,11 +8,11 @@
     </p>
   </div>
   <div class="home-auth">
-    <a class="btn-home-signup" [routerLink]="['/signup']">
-      <div class="home-signup"><span>Sign Up</span></div>
+    <a class="btn-home-a" [routerLink]="['/signup']">
+      <div class="btn-home"><span>Sign Up</span></div>
     </a>
-    <a class="btn-home-login" [routerLink]="['/login']">
-      <div class="home-login"><span>Log In</span></div>
+    <a class="btn-home-a" [routerLink]="['/login']">
+      <div class="btn-home"><span>Log In</span></div>
     </a>
   </div>
 </div>
