--- a/src/app/pages/login-form/login-form.component.html
+++ b/src/app/pages/login-form/login-form.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="form-button">
-      <button type="submit" [disabled]="processing" class="btn-login">Log In</button>
+      <button type="submit" [disabled]="processing">Log In</button>
       <div *ngIf="feedbackEnabled && form.invalid">
         <p class="validation">there are errors in the form, please review the fields</p>
       </div>
