--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -9,6 +9,7 @@
   font-size: 120px;
   margin: 0px;
   color: #1371A7;
+  line-height: 120px;
 }
 .home-title img{
   width: 335px;
@@ -17,17 +18,15 @@
   margin-bottom: 80px;
   font-size: 18px;
 }
-.btn-home-signup,.btn-home-login {
+.btn-home-a{
   text-decoration: none;
   font-weight: bold;
-  color: #fff; 
-  display: block;
-  width: 100%;
-  margin: 0 auto;
-  border-radius: 2px;
+  color: #1371A7; 
 }
-.home-signup, .home-login{
+.btn-home{
+  background: #fff;
   padding: 15px;
-  border-radius: 2px;
+  border: 1px solid #1471a7;
+  border-radius: 5px;
   margin-bottom: 10px;
 }
