--- a/src/app/pages/signup-form/signup-form.component.html
+++ b/src/app/pages/signup-form/signup-form.component.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="form-button">
-      <button type="submit" [disabled]="processing" class="btn-signup">Sign Up</button>
+      <button type="submit" [disabled]="processing">Sign Up</button>
       <div *ngIf="feedbackEnabled && form.invalid">
         <p class="validation">there are errors in the form, please review the fields</p>
       </div>
