--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,8 +1,10 @@
 .myjobs-nav {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   border-bottom: 1px solid #1371A7;
   margin-bottom: 25px;
-  align-items: center;
+}
+.navbar a{
+  text-decoration: none;
+  color: #1371A7;
+  font-weight: bold;
 }
