--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 </div>
 <div *ngIf="user">
   <div class="myjobs-nav">
-    <div>
+    <div class="navbar">
       <a [routerLink]="['/profile']">Profile</a> |
       <a *ngIf="user.role === 'employer'" [routerLink]="['/my-jobs']">My Jobs</a>
       <a *ngIf="user.role === 'student'" [routerLink]="['/jobs']">Jobs</a>
