--- a/src/styles.css
+++ b/src/styles.css
@@ -128,3 +128,6 @@ footer{
   border-radius: 2px;
   box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
 }
+a {
+  text-decoration: none;
+}
