style everything before further changes

--- a/src/app/pages/jobs-id/jobs-id.component.css
+++ b/src/app/pages/jobs-id/jobs-id.component.css
@@ -1,3 +1,12 @@
 .job-details{
   margin-bottom: 25px;
 }
+.job-details h2{
+  margin-top: 0px;
+}
+.arch-nav{
+  text-align: right;
+}
+.arch-nav span, .job-publisher a {
+  color: #1371a7;
+}
