--- a/src/app/pages/my-jobs/my-jobs.component.html
+++ b/src/app/pages/my-jobs/my-jobs.component.html
@@ -3,6 +3,9 @@
   <p>Loading ...</p>
 </div>
 <div class="myjobs-wrapper" *ngIf="jobs">
+  <div class="arch-nav">
+    <a [routerLink]="['/my-jobs/archived']">Archived Jobs</a>
+  </div>
   <h1>My Jobs</h1>
   <div *ngFor="let job of jobs">
     <app-job-card [job]="job"></app-job-card>
@@ -10,6 +13,5 @@
   <div *ngIf="jobs.length === 0" class="job-item">
     No jobs created yet.
   </div>
-  <a [routerLink]="['/my-jobs/archived']">Archived Jobs</a>
   <app-add-job></app-add-job>
 </div>
