--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,9 @@ footer{
   border-radius: 2px;
   box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
 }
+.pending{
+  background: orange;
+}
 a {
   text-decoration: none;
   color: #444;
@@ -135,4 +138,13 @@ a {
 .job-position, .applicant-name {
   text-transform: uppercase;
   font-weight: bold;
+}
+.arch-nav{
+  text-align: right;
+}
+.arch-nav a {
+  color: #1371a7;
+}
+.myjobs-wrapper h1{
+  margin-top: 0px;
 }
