add favicon + style

--- a/src/app/components/profile-info/profile-info.component.html
+++ b/src/app/components/profile-info/profile-info.component.html
@@ -12,7 +12,7 @@
     <div class="profile-description">
       <div class="desc-box">
         <h3>About Me</h3>
-        <div class="desc-img" *ngIf="userRole === userProfile">
+        <div class="desc-img" *ngIf="userRole._id === userProfile._id">
           <img src="/assets/img/edit.png" alt="Edit About Me" (click)="allowEdit()" />
         </div>
       </div>
@@ -37,6 +37,25 @@
     <div class="form-button">
       <button class="btn-create">Accept</button>
     </div>
+
+
+    <div class="form-button signup-radio">
+      <h3>Application Status:</h3>
+      <div class="signup-input">
+        <input type="radio" name="status" id="status-pending" value="pending" [(ngModel)]="role" #roleField="ngModel" checked="checked"/>
+        <label class="label-status" for="status-pending">Pending</label>
+      </div>
+      <div class="signup-input">
+        <input type="radio" name="status" id="status-accepted" value="accepted" [(ngModel)]="role" #roleField="ngModel"/>
+        <label class="label-status" for="status-accepted">Accepted</label>
+      </div>
+      <div class="signup-input">
+        <input type="radio" name="status" id="status-rejected" value="rejected" [(ngModel)]="role" #roleField="ngModel"/>
+        <label class="label-status" for="status-rejected">Rejected</label>
+      </div>
+    </div>
+
+
   </div>
   <div *ngIf="userRole.role === 'employer' && userProfile.role === 'employer'" >
     <app-add-job></app-add-job>
