--- a/src/app/pages/login-form/login-form.component.html
+++ b/src/app/pages/login-form/login-form.component.html
@@ -22,5 +22,5 @@
       </div>
     </div>
   </form>
-  <a [routerLink]="['/signup']">Sign Up</a>
+  <span>You don't have an account? <a [routerLink]="['/signup']" class="text-link">Sign Up</a></span>
 </div>
