--- a/src/app/pages/signup-form/signup-form.component.html
+++ b/src/app/pages/signup-form/signup-form.component.html
@@ -44,5 +44,5 @@
       </div>
     </div>
   </form>
-  <a [routerLink]="['/login']">Log In</a>
+  <span>Do you already have an account? <a [routerLink]="['/login']" class="text-link">Log In</a></span>
 </div>
