--- a/src/styles.css
+++ b/src/styles.css
@@ -131,19 +131,22 @@ footer{
 .pending{
   background: orange;
 }
-a {
-  text-decoration: none;
-  color: #444;
-}
 .job-position, .applicant-name {
   text-transform: uppercase;
   font-weight: bold;
+}
+a {
+  text-decoration: none;
+  color: #444;
 }
 .arch-nav{
   text-align: right;
 }
 .arch-nav a {
   color: #1371a7;
+}
+.text-link{
+  text-decoration: underline;
 }
 .myjobs-wrapper h1{
   margin-top: 0px;
