status change working

--- a/src/app/components/profile-info/profile-info.component.css
+++ b/src/app/components/profile-info/profile-info.component.css
@@ -12,6 +12,9 @@
 .profile-description{
   text-align: left;
 }
+.profile-description p{
+  margin-bottom: 15px;
+}
 .desc-box{
   display: flex;
   align-items: center;
@@ -19,4 +22,8 @@
 .desc-img img{
   height: 20px;
   margin-left: 10px;
+}
+.btn-status{
+  flex: 1 0;
+  margin: 0 2px;
 }
