--- a/src/app/pages/create-job/create-job.component.html
+++ b/src/app/pages/create-job/create-job.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-input" [ngClass]="{'has-error': feedbackEnabled && descriptionField.errors}">
       <label>Job Description</label>
-      <input type="text" name="description" [(ngModel)]="description" #descriptionField="ngModel" required [disabled]="processing"/>
+      <textarea type="text" name="description" [(ngModel)]="description" #descriptionField="ngModel" required [disabled]="processing" rows="8"></textarea>
       <div *ngIf="feedbackEnabled && descriptionField.errors">
         <p *ngIf="descriptionField.errors.required" class="validation">description required</p>
       </div>
