--- a/src/app/components/applicant-card/applicant-card.component.html
+++ b/src/app/components/applicant-card/applicant-card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/profile', applicant.user._id]">
+<a [routerLink]="['/jobs', job._id, 'candidate', applicant.user._id]">
   <div class="applicant card">
     <div class="applicant-img">
       <img src="/assets/img/profilepic.png" alt="Applicant Picture" />
